new Integer(int) foi descontinuado (deprecated) trocando por Integer.valueOf